# libdict

./: CMakeLists.txt  README.md
